--- a/bots.html
+++ b/bots.html
@@ -1,121 +1,116 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Détails sur la création de mes bots" />
-    <meta name="robots" content="index, follow" />
-    <title>Création de bots | SEMENOV Aleksandr</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body>
-    <canvas id="bg-canvas"></canvas>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Détails sur la création de mes bots">
+        <meta name="robots" content="index, follow">
+        <title>Création de bots | SEMENOV Aleksandr</title>
+        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <canvas id="bg-canvas"></canvas>
 
-    <header>
-      <div class="header-titles">
-        <h1>SEMENOV Aleksandr</h1>
-        <h2>DÉVELOPPEUR WEB</h2>
-      </div>
-      <a
-        href="cv/cv.pdf"
-        download
-        class="btn-download-cv"
-        aria-label="Télécharger CV en PDF"
-      >
-        Télécharger CV
-      </a>
-
-      <nav class="navbar">
-        <button class="nav-toggle" aria-label="open menu">☰</button>
-        <ul>
-          <li>
-            <a href="index.html">
-              <img src="img/exp-icon.webp" alt="" />
-              <span class="nav-no-wrap">ACCUEIL</span>
+        <header>
+            <div class="header-titles">
+                <h1>SEMENOV Aleksandr</h1>
+                <h2>DÉVELOPPEUR WEB</h2>
+            </div>
+            <a href="cv/cv.pdf" download class="btn-download-cv" aria-label="Télécharger CV en PDF">
+                Télécharger CV
             </a>
-          </li>
-          <li>
-            <a href="about.html">
-              <img src="img/about-icon.webp" alt="" />
-              <span class="nav-no-wrap">À PROPOS</span>
-            </a>
-          </li>
-          <li>
-            <a href="projects.html">
-              <img src="img/skills-icon.webp" alt="" />
-              <span>PROJETS</span>
-            </a>
-          </li>
-          <li>
-            <a href="contact.html">
-              <img src="img/contact-icon.webp" alt="" />
-              <span class="nav-no-wrap">CONTACT</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-      <!-- Section Création de bots -->
-      <div class="section-wrapper" id="creation-bots">
-        <section>
-          <h2 class="section-title">Création de bots</h2>
-          <p class="section-text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, id
-            accusantium. Dolores veniam ea laborum? Itaque consequatur, saepe
-            sed, libero autem dignissimos repudiandae recusandae earum ipsam
-            sapiente possimus dolor veniam!
-          </p>
-        </section>
-      </div>
+            <nav class="navbar">
+                <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
+                <ul>
+                    <li>
+                        <a href="index.html">
+                            <img src="img/exp-icon.webp" alt="Accueil">
+                            <span class="nav-no-wrap">ACCUEIL</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="about.html">
+                            <img src="img/about-icon.webp" alt="À propos">
+                            <span class="nav-no-wrap">À PROPOS</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="projects.html">
+                            <img src="img/skills-icon.webp" alt="Projets">
+                            <span>PROJETS</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="contact.html">
+                            <img src="img/contact-icon.webp" alt="Contact">
+                            <span class="nav-no-wrap">CONTACT</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
 
-      <!-- Nouveaux articles d'intérêt -->
-      <div class="section-wrapper">
-        <section>
-          <h2 class="section-title">Mes centres d’intérêt</h2>
-          <div class="projects-grid">
-            <!-- 1. Création de bots -->
-            <article class="project-card">
-              <h3>Création de bots</h3>
-              <p>
-                Depuis mon enfance, j’adore concevoir divers bots : j’ai
-                commencé à en développer à l’âge de 6 ans.
-              </p>
-              <button class="btn-link" disabled aria-disabled="true">
-                En savoir plus
-              </button>
-            </article>
+        <main>
+            <!-- Section Création de bots -->
+            <div class="section-wrapper" id="creation-bots">
+                <section>
+                    <h2 class="section-title">Création de bots</h2>
+                    <p class="section-text">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, id
+                        accusantium. Dolores veniam ea laborum? Itaque consequatur, saepe
+                        sed, libero autem dignissimos repudiandae recusandae earum ipsam
+                        sapiente possimus dolor veniam!
+                    </p>
+                </section>
+            </div>
 
-            <!-- 2. Informatique & IA -->
-            <article class="project-card">
-              <h3>Informatique &amp; IA</h3>
-              <p>
-                Depuis 2018, je m’intéresse aux intelligences artificielles,
-                débutant avec OpenAI et poursuivant sans cesse mes découvertes.
-              </p>
-              <a href="ai.html" class="btn-link">En savoir plus</a>
-            </article>
+            <!-- Nouveaux articles d'intérêt -->
+            <div class="section-wrapper">
+                <section>
+                    <h2 class="section-title">Mes centres d’intérêt</h2>
+                    <div class="projects-grid">
+                        <!-- 1. Création de bots -->
+                        <article class="project-card">
+                            <h3>Création de bots</h3>
+                            <p>
+                                Depuis mon enfance, j’adore concevoir divers bots : j’ai
+                                commencé à en développer à l’âge de 6 ans.
+                            </p>
+                            <button class="btn-link" type="button" disabled aria-disabled="true">
+                                En savoir plus
+                            </button>
+                        </article>
 
-            <!-- 3. Test de jeux & mods -->
-            <article class="project-card">
-              <h3>Test de jeux &amp; mods</h3>
-              <p>
-                À partir de 2016, j’ai développé une passion de testeur de mods
-                de jeux, apprenant à gérer Trello et Jira.
-              </p>
-              <a href="tester.html" class="btn-link">En savoir plus</a>
-            </article>
-          </div>
-        </section>
-      </div>
-    </main>
+                        <!-- 2. Informatique & IA -->
+                        <article class="project-card">
+                            <h3>Informatique &amp; IA</h3>
+                            <p>
+                                Depuis 2018, je m’intéresse aux intelligences artificielles,
+                                débutant avec OpenAI et poursuivant sans cesse mes découvertes.
+                            </p>
+                            <a href="ai.html" class="btn-link">En savoir plus</a>
+                        </article>
 
-    <footer>
-      <p>&copy; 2025. SEMENOV Aleksandr</p>
-    </footer>
+                        <!-- 3. Test de jeux & mods -->
+                        <article class="project-card">
+                            <h3>Test de jeux &amp; mods</h3>
+                            <p>
+                                À partir de 2016, j’ai développé une passion de testeur de mods
+                                de jeux, apprenant à gérer Trello et Jira.
+                            </p>
+                            <a href="tester.html" class="btn-link">En savoir plus</a>
+                        </article>
+                    </div>
+                </section>
+            </div>
+        </main>
 
-    <script src="js/main.js"></script>
-  </body>
+        <footer>
+            <p>&copy; 2025 SEMENOV Aleksandr</p>
+        </footer>
+
+        <script src="js/main.js"></script>
+    </body>
 </html>
