--- a/html/future.html
+++ b/html/future.html
@@ -14,7 +14,7 @@
             rel="stylesheet"
             integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
             crossorigin="anonymous">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <canvas id="bg-canvas"></canvas>
@@ -31,25 +31,25 @@
                 <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
                 <ul>
                     <li>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img src="img/exp-icon.webp" alt="Accueil">
                             <span class="nav-no-wrap">ACCUEIL</span>
                         </a>
                     </li>
                     <li>
-                        <a href="about.html">
+                        <a href="../html/about.html">
                             <img src="img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="projects.html">
+                        <a href="../html/projects.html">
                             <img src="img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="../html/contact.html">
                             <img src="img/contact-icon.webp" alt="Contact">
                             <span class="nav-no-wrap">CONTACT</span>
                         </a>
