--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
                 <ul>
                     <li>
-                        <a href="about.html">
+                        <a href="html/about.html">
                             <img src="img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="projects.html">
+                        <a href="html/projects.html">
                             <img src="img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
@@ -66,7 +66,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="html/contact.html">
                             <img src="img/contact-icon.webp" alt="Contact">
                             <span>CONTACT</span>
                         </a>
