--- a/html/ai.html
+++ b/html/ai.html
@@ -7,7 +7,7 @@
         <meta name="robots" content="index, follow">
         <title>Création d&#39;IA | SEMENOV Aleksandr</title>
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <canvas id="bg-canvas"></canvas>
@@ -25,25 +25,25 @@
                 <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
                 <ul>
                     <li>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img src="img/exp-icon.webp" alt="Accueil">
                             <span class="nav-no-wrap">ACCUEIL</span>
                         </a>
                     </li>
                     <li>
-                        <a href="about.html">
+                        <a href="../html/about.html">
                             <img src="img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="projects.html" class="active">
+                        <a href="../html/projects.html" class="active">
                             <img src="img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="../html/contact.html">
                             <img src="img/contact-icon.webp" alt="Contact">
                             <span class="nav-no-wrap">CONTACT</span>
                         </a>
@@ -77,17 +77,17 @@
                         <article class="project-card">
                             <h3>Création de bots</h3>
                             <p>
-                                Depuis mon enfance, j’adore concevoir divers bots : j’ai
-                                commencé à en développer à l’âge de 6 ans.
+                                Depuis mon enfance, j’adore concevoir divers bots : j’ai
+                                commencé à en développer à l’âge de 6 ans.
                             </p>
-                            <a href="bots.html" class="btn-link">En savoir plus</a>
+                            <a href="../html/bots.html" class="btn-link">En savoir plus</a>
                         </article>
 
                         <!-- 2. Informatique & IA -->
                         <article class="project-card">
                             <h3>Informatique &amp; IA</h3>
                             <p>
-                                Depuis 2018, je m’intéresse aux intelligences artificielles,
+                                Depuis 2018, je m’intéresse aux intelligences artificielles,
                                 débutant avec OpenAI et poursuivant sans cesse mes découvertes.
                             </p>
                             <button class="btn-link" type="button" disabled aria-disabled="true">
@@ -99,10 +99,10 @@
                         <article class="project-card">
                             <h3>Test de jeux &amp; mods</h3>
                             <p>
-                                À partir de 2016, j’ai développé une passion de testeur de mods
-                                de jeux, apprenant à gérer Trello et Jira.
+                                À partir de 2016, j’ai développé une passion de testeur de mods
+                                de jeux, apprenant à gérer Trello et Jira.
                             </p>
-                            <a href="tester.html" class="btn-link">En savoir plus</a>
+                            <a href="../html/tester.html" class="btn-link">En savoir plus</a>
                         </article>
                     </div>
                 </section>
@@ -110,7 +110,7 @@
         </main>
 
         <footer>
-            <p>&copy; 2025 SE​MENOV Aleksandr</p>
+            <p>&copy; 2025 SEMENOV Aleksandr</p>
         </footer>
 
         <script src="js/main.js"></script>
