--- a/html/bots.html
+++ b/html/bots.html
@@ -7,7 +7,7 @@
         <meta name="robots" content="index, follow">
         <title>Création de bots | SEMENOV Aleksandr</title>
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <canvas id="bg-canvas"></canvas>
@@ -25,25 +25,25 @@
                 <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
                 <ul>
                     <li>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img src="img/exp-icon.webp" alt="Accueil">
                             <span class="nav-no-wrap">ACCUEIL</span>
                         </a>
                     </li>
                     <li>
-                        <a href="about.html">
+                        <a href="../html/about.html">
                             <img src="img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="projects.html">
+                        <a href="../html/projects.html">
                             <img src="img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="../html/contact.html">
                             <img src="img/contact-icon.webp" alt="Contact">
                             <span class="nav-no-wrap">CONTACT</span>
                         </a>
@@ -90,7 +90,7 @@
                                 Depuis 2018, je m’intéresse aux intelligences artificielles,
                                 débutant avec OpenAI et poursuivant sans cesse mes découvertes.
                             </p>
-                            <a href="ai.html" class="btn-link">En savoir plus</a>
+                            <a href="../html/ai.html" class="btn-link">En savoir plus</a>
                         </article>
 
                         <!-- 3. Test de jeux & mods -->
@@ -100,7 +100,7 @@
                                 À partir de 2016, j’ai développé une passion de testeur de mods
                                 de jeux, apprenant à gérer Trello et Jira.
                             </p>
-                            <a href="tester.html" class="btn-link">En savoir plus</a>
+                            <a href="../html/tester.html" class="btn-link">En savoir plus</a>
                         </article>
                     </div>
                 </section>
