--- a/html/projects.html
+++ b/html/projects.html
@@ -7,7 +7,7 @@
         <meta name="robots" content="index, follow">
         <title>Projets | SEMENOV Aleksandr</title>
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
         <canvas id="bg-canvas"></canvas>
@@ -25,25 +25,25 @@
                 <button class="nav-toggle" type="button" aria-label="Ouvrir le menu">☰</button>
                 <ul>
                     <li>
-                        <a href="index.html">
+                        <a href="../index.html">
                             <img src="img/exp-icon.webp" alt="Accueil">
                             <span class="nav-no-wrap">ACCUEIL</span>
                         </a>
                     </li>
                     <li>
-                        <a href="about.html">
+                        <a href="../html/about.html">
                             <img src="img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="projects.html" class="active">
+                        <a href="../html/projects.html" class="active">
                             <img src="img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
                     </li>
                     <li>
-                        <a href="contact.html">
+                        <a href="../html/contact.html">
                             <img src="img/contact-icon.webp" alt="Contact">
                             <span class="nav-no-wrap">CONTACT</span>
                         </a>
