--- a/html/contact.html
+++ b/html/contact.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Contact SEMENOV Aleksandr">
         <meta name="robots" content="index, follow">
         <title>Contact | SEMENOV Aleksandr</title>
-        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
@@ -18,7 +18,7 @@
                 <h2>DÉVELOPPEUR WEB</h2>
             </div>
             <a
-                href="cv/cv.pdf"
+                href="../cv/cv.pdf"
                 download
                 class="btn-download-cv"
                 aria-label="Télécharger CV en PDF"
@@ -31,25 +31,25 @@
                 <ul>
                     <li>
                         <a href="../index.html">
-                            <img src="img/exp-icon.webp" alt="Accueil">
+                            <img src="../img/exp-icon.webp" alt="Accueil">
                             <span class="nav-no-wrap">ACCUEIL</span>
                         </a>
                     </li>
                     <li>
                         <a href="../html/about.html">
-                            <img src="img/about-icon.webp" alt="À propos">
+                            <img src="../img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
                         <a href="../html/projects.html">
-                            <img src="img/skills-icon.webp" alt="Projets">
+                            <img src="../img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
                     </li>
                     <li>
                         <a href="../html/contact.html" class="active">
-                            <img src="img/contact-icon.webp" alt="Contact">
+                            <img src="../img/contact-icon.webp" alt="Contact">
                             <span class="nav-no-wrap">CONTACT</span>
                         </a>
                     </li>
