--- a/html/projects.html
+++ b/html/projects.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Projets de SEMENOV Aleksandr">
         <meta name="robots" content="index, follow">
         <title>Projets | SEMENOV Aleksandr</title>
-        <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="../css/styles.css">
     </head>
     <body>
@@ -26,25 +26,25 @@
                 <ul>
                     <li>
                         <a href="../index.html">
-                            <img src="img/exp-icon.webp" alt="Accueil">
+                            <img src="../img/exp-icon.webp" alt="Accueil">
                             <span class="nav-no-wrap">ACCUEIL</span>
                         </a>
                     </li>
                     <li>
                         <a href="../html/about.html">
-                            <img src="img/about-icon.webp" alt="À propos">
+                            <img src="../img/about-icon.webp" alt="À propos">
                             <span class="nav-no-wrap">À PROPOS</span>
                         </a>
                     </li>
                     <li>
                         <a href="../html/projects.html" class="active">
-                            <img src="img/skills-icon.webp" alt="Projets">
+                            <img src="../img/skills-icon.webp" alt="Projets">
                             <span>PROJETS</span>
                         </a>
                     </li>
                     <li>
                         <a href="../html/contact.html">
-                            <img src="img/contact-icon.webp" alt="Contact">
+                            <img src="../img/contact-icon.webp" alt="Contact">
                             <span class="nav-no-wrap">CONTACT</span>
                         </a>
                     </li>
