--- a/html/tester.html
+++ b/html/tester.html
@@ -31,25 +31,25 @@
         <ul>
           <li>
             <a href="../index.html">
-              <img src="img/exp-icon.webp" alt="Accueil">
+              <img src="../img/exp-icon.webp" alt="Accueil">
               <span class="nav-no-wrap">ACCUEIL</span>
             </a>
           </li>
           <li>
             <a href="../html/about.html">
-              <img src="img/about-icon.webp" alt="À propos">
+              <img src="../img/about-icon.webp" alt="À propos">
               <span class="nav-no-wrap">À PROPOS</span>
             </a>
           </li>
           <li>
             <a href="../html/projects.html">
-              <img src="img/skills-icon.webp" alt="Projets">
+              <img src="../img/skills-icon.webp" alt="Projets">
               <span>PROJETS</span>
             </a>
           </li>
           <li>
             <a href="../html/contact.html">
-              <img src="img/contact-icon.webp" alt="Contact">
+              <img src="../img/contact-icon.webp" alt="Contact">
               <span class="nav-no-wrap">CONTACT</span>
             </a>
           </li>
@@ -63,10 +63,9 @@
         <section>
           <h2 class="section-title">Test de jeux &amp; mods</h2>
           <p class="section-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id vitae
-            sed voluptas beatae dolorum cumque magni, odit harum architecto
-            accusantium ad officiis omnis eaque quidem distinctio reprehenderit
-            veritatis quas ipsa?
+           En 2016, on m’a invité à devenir testeur parce que j’envoyais trop de rapports de bugs, et très souvent. 
+           Depuis, je cherche les bugs de manière intentionnelle. 
+           Nous travaillons sur un tableau Trello, où nous écrivons chaque bug ou suggestion pour le jeu en cards.
           </p>
         </section>
       </div>
