--- a/html/ai.html
+++ b/html/ai.html
@@ -58,10 +58,12 @@
                 <section>
                     <h2 class="section-title">Informatique &amp; IA</h2>
                     <p class="section-text">
-                        Depuis l’apparition de l’IA, je m’y suis tout de suite intéressé. Au début, c’était une IA 
-                        qui contrôlait une équipe de "joueurs" pour jouer contre des vraies personnes. Ensuite, il 
-                        y a eu des IA pour créer des images, de la musique et des vidéos. Tout cela est très intéressant. 
-                        J’ai même essayé de créer mon propre réseau neuronal en Python, mais c’était trop compliqué pour moi.
+                        Depuis l’apparition de l’IA, je m’y suis tout de suite intéressé. Au
+                        début, c’était une IA qui contrôlait une équipe de "joueurs" pour
+                        jouer contre des vraies personnes. Ensuite, il y a eu des IA pour
+                        créer des images, de la musique et des vidéos. Tout cela est très
+                        intéressant. J’ai même essayé de créer mon propre réseau neuronal en
+                        Python, mais c’était trop compliqué pour moi.
                     </p>
                 </section>
             </div>
