--- a/html/tester.html
+++ b/html/tester.html
@@ -63,9 +63,10 @@
         <section>
           <h2 class="section-title">Test de jeux &amp; mods</h2>
           <p class="section-text">
-           En 2016, on m’a invité à devenir testeur parce que j’envoyais trop de rapports de bugs, et très souvent. 
-           Depuis, je cherche les bugs de manière intentionnelle. 
-           Nous travaillons sur un tableau Trello, où nous écrivons chaque bug ou suggestion pour le jeu en cards.
+            En 2016, on m’a invité à devenir testeur parce que j’envoyais trop
+            de rapports de bugs, et très souvent. Depuis, je cherche les bugs de
+            manière intentionnelle. Nous travaillons sur un tableau Trello, où
+            nous écrivons chaque bug ou suggestion pour le jeu en cards.
           </p>
         </section>
       </div>
