--- a/html/tester.html
+++ b/html/tester.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Détails sur mes tests de jeux et mods">
     <meta name="robots" content="index, follow">
     <title>Test de jeux &amp; mods | SEMENOV Aleksandr</title>
-    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../img/favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="../css/styles.css">
   </head>
   <body>
