--- a/html/projects.html
+++ b/html/projects.html
@@ -109,6 +109,6 @@
             <p>&copy; 2025. SEMENOV Aleksandr</p>
         </footer>
 
-        <script src="js/main.js"></script>
+        <script src="../js/main.js"></script>
     </body>
 </html>
