--- a/html/ai.html
+++ b/html/ai.html
@@ -113,6 +113,6 @@
             <p>&copy; 2025 SEMENOV Aleksandr</p>
         </footer>
 
-        <script src="js/main.js"></script>
+        <script src="../js/main.js"></script>
     </body>
 </html>
