--- a/html/bots.html
+++ b/html/bots.html
@@ -111,6 +111,6 @@
             <p>&copy; 2025 SEMENOV Aleksandr</p>
         </footer>
 
-        <script src="js/main.js"></script>
+        <script src="../js/main.js"></script>
     </body>
 </html>
