--- a/html/future.html
+++ b/html/future.html
@@ -96,7 +96,7 @@
             <p>&copy; 2025. SEMENOV Aleksandr</p>
         </footer>
 
-        <script src="js/main.js"></script>
+        <script src="../js/main.js"></script>
         <!-- Bootstrap JS Bundle (optionnel) -->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
